fix: corrigir a criação de URL usando URI para a requisição de distância e remover importações não utilizadas